--- a/wp-content/themes/divi-ncruralcenter/sass/layouts/_staff.scss
+++ b/wp-content/themes/divi-ncruralcenter/sass/layouts/_staff.scss
@@ -12,7 +12,7 @@
 
   .tagline {
     font-family: $font-sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.2em;
   }
